<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_header"
        android:background="@drawable/shape_header">

        <TextView
            style="@style/st_16_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/auth" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black_50"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/st_12_black_50"
            android:layout_marginTop="@dimen/pad_16"
            android:layout_marginLeft="@dimen/pad_36"
            android:layout_marginRight="@dimen/pad_36">

            <com.dpcsa.compon.custom_components.ComponEditText
                android:id="@+id/login"
                style="@style/st_16_black"
                android:theme="@style/styleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black_50"
                android:hint="@string/login"
                android:imeOptions="actionNext"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:text="dolg"
                app:minLength="3"
                app:textError="@string/error_ed"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black_50"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/st_12_black_50"
            android:layout_marginTop="@dimen/pad_16"
            android:layout_marginLeft="@dimen/pad_36"
            android:layout_marginRight="@dimen/pad_36">

            <com.dpcsa.compon.custom_components.ComponEditText
                android:id="@+id/password"
                style="@style/st_16_black"
                android:theme="@style/styleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black_50"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:text="123321"
                app:minLength="6"
                app:textError="@string/error_ed"/>
        </android.support.design.widget.TextInputLayout>

        <com.dpcsa.compon.custom_components.EditPassword
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/styleEditText"
            android:layout_marginTop="30dp"
            style="@style/st_16_black"
            app:idShowPassword="@drawable/eye_open"
            app:idHidePassword="@drawable/eye_close"
            android:layout_marginLeft="@dimen/pad_36"
            android:layout_marginRight="@dimen/pad_36"/>

        <TextView
            android:id="@+id/done"
            style="@style/st_button_1"
            android:letterSpacing="0.14"
            android:layout_marginTop="@dimen/pad_12"
            android:layout_marginLeft="@dimen/pad_36"
            android:layout_marginRight="@dimen/pad_36"
            android:text="@string/enter"/>

        <TextView
            android:id="@+id/register"
            style="@style/st_button_1"
            android:letterSpacing="0.14"
            android:layout_marginTop="@dimen/pad_40"
            android:layout_marginLeft="@dimen/pad_36"
            android:layout_marginRight="@dimen/pad_36"
            android:text="@string/sign_up"/>

        <TextView
            android:id="@+id/enter_skip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h_button"
            android:layout_marginTop="@dimen/pad_40"
            android:gravity="center"
            android:text="@string/enter_skip"
            android:textColor="@color/green_teal"
            android:textSize="@dimen/pad_16"/>
    </LinearLayout>
</LinearLayout>